--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -47,7 +47,7 @@
         <div class="flex spaceBetween menuBlock">
             <div class=" flex leftMenuBlock">
                 <div class="margin-left30px">
-                    <a class="deleteButton" href="~/Index/DeleteTask/@Model.listTasks[i].Id">
+                    <a class="deleteButton" href="~/Index/DeleteTask/@Model.listTasks[i].Id?returnId=@Model.groupId">
                         <span class="material-icons">delete</span>
                     </a>
                 </div>
