--- a/Classroom/Views/Index/PeopleInGroup.cshtml
+++ b/Classroom/Views/Index/PeopleInGroup.cshtml
@@ -37,7 +37,7 @@
             <div class="flex spaceBetween menuBlock">
                 <div class="flex leftMenuBlock"></div>
                 <div class="rightMenuBlock button3 margin-right30px">
-                    <a href="~/Index/TasksInGroup/@ViewData["currentId"]">Завдання</a>
+                    <a class="linksStyle" href="~/Index/TasksInGroup/@ViewData["currentId"]">Завдання</a>
                 </div>
             </div>
             <h4>Власник: @Model.owner.Name</h4>
