--- a/Classroom/wwwroot/css/StyleSheet.css
+++ b/Classroom/wwwroot/css/StyleSheet.css
@@ -130,3 +130,19 @@
 
 .flexColumn {
   flex-direction: column; }
+
+.textWrap {
+  overflow-wrap: normal;
+  width: 100%; }
+
+.spliter {
+  margin: 20px; }
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  margin-top: -5px; }
+
+.description {
+  margin: 20px; }
