--- a/Classroom/wwwroot/css/StyleSheet.scss
+++ b/Classroom/wwwroot/css/StyleSheet.scss
@@ -163,3 +163,23 @@
 .flexColumn {
     flex-direction: column;
 }
+
+.textWrap {
+    overflow-wrap: normal;
+    width: 100%
+}
+
+.spliter {
+    margin: 20px;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    margin-top: -5px;
+}
+
+.description{
+    margin:20px;
+}
