--- a/Classroom/Views/Shared/_Layout.cshtml
+++ b/Classroom/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 <body>
     <header style="display:flex; justify-content: center;">
         <br />
-        <img src="Images\Logo.png" height="200" />
+        <img src="~/Images/Logo.png" height="200" />
     </header>
     <div class="MenuContent" style="min-height: 650px">
         <main role="main" class="">
