--- a/Classroom/Views/GroupC/Create.cshtml
+++ b/Classroom/Views/GroupC/Create.cshtml
@@ -13,14 +13,14 @@
         <h3 style="text-align: center;">Створення групи</h3>
         <br />
         <label>Name</label>
-        <input type="text" name="name" placeholder="name"/>
+        <input type="text" name="name" placeholder="Назва"/>
 
         <label>Description</label>
-        <input type="text" name="description" placeholder="description" />
+        <input type="text" name="description" placeholder="Опис" />
 
 
         <label>Password</label>
-        <input type="password" name="password" placeholder="password"/>
+        <input type="password" name="password" placeholder="Пароль"/>
 
 
         <input type="submit" value="Ввійти">
