--- a/Classroom/Views/GroupC/Join.cshtml
+++ b/Classroom/Views/GroupC/Join.cshtml
@@ -14,11 +14,11 @@
         <div class="form-inner centerText">
             <h3 style="text-align: center;">Ввійти в групу</h3>
             <br />
-            <label>Id</label>
-            <input type="text" name="id" placeholder="id" />
+            <label>Індитифікатор</label>
+            <input type="text" name="id" placeholder="Індитифікатор" />
 
-            <label>Password</label>
-            <input type="password" name="password" placeholder="password" />
+            <label>Пароль</label>
+            <input type="password" name="password" placeholder="Пароль" />
 
             <input type="submit" value="Ввійти">
 
