--- a/Classroom/Views/GroupC/Create.cshtml
+++ b/Classroom/Views/GroupC/Create.cshtml
@@ -12,10 +12,10 @@
     <div class="form-inner centerText">
         <h3 style="text-align: center;">Створення групи</h3>
         <br />
-        <label>Name</label>
+        <label>Назва</label>
         <input type="text" name="name" placeholder="Назва"/>
 
-        <label>Description</label>
+        <label>Опис</label>
         <input type="text" name="description" placeholder="Опис" />
 
 
