--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -88,7 +88,7 @@
                             <form method="post" action="~/Index/SetMark">
                                 <input type="hidden" name="idReaply" value="@r.Id" />
                                 <input type="number" name="mark" value="@r.Mark" />
-                                <input type="submit" value="set mark" />
+                                <input class="button" type="submit" value="set mark" />
                             </form>
                         </div>
                     </div>
