--- a/Classroom/Views/Index/CreateTask.cshtml
+++ b/Classroom/Views/Index/CreateTask.cshtml
@@ -35,16 +35,16 @@
         <input type="hidden" name="id" value="@Model.idGroup" />
         <h3 style="text-align: center;">Створити завдання</h3>
         <br />
-        <label>Title</label>
-        <input type="text" name="title" placeholder="title" />
+        <label>Титулка</label>
+        <input type="text" name="title" placeholder="Титулка" />
 
-        <label>Description</label>
-        <input type="text" name="description" placeholder="description" />
+        <label>Опис</label>
+        <input type="text" name="description" placeholder="Опис" />
 
-        <label>Description</label>
-        <input type="text" name="description" placeholder="description" />
+        <label>Опис</label>
+        <input type="text" name="description" placeholder="Опис" />
 
-        <label>File</label>
+        <label>Файл</label>
         <input type="file" name="uploadedFile" />
 
         <input type="submit" value="Створити">
