--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -62,7 +62,7 @@
     </div>
 
     <div class="whiteSpace">
-        <h3 class="centerText">Групи в яких я є членом</h3>
+        <h3 class="centerText">Мої групи</h3>
 
         @for (int i = 0; i < Model.listGroups.Count; i++)
         {
