--- a/Classroom/Views/Index/Reaply.cshtml
+++ b/Classroom/Views/Index/Reaply.cshtml
@@ -18,10 +18,10 @@
         <input type="hidden" name="userId" value="@Model.userId" />
         <h3 style="text-align: center;">Створити відповідь</h3>
         <br />
-        <label>Description</label>
+        <label>Опис</label>
         <textarea type="text" name="description" placeholder="description"></textarea>
 
-        <label>File</label>
+        <label>Файл</label>
         <input type="file" name="uploadedFile" />
 
         <input type="submit" value="Створити">
