--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -12,15 +12,15 @@
             <h4 class="centerText">Завдання</h4>
             <div class="flex flexColumn">
                 <div class="centerText" style="width:100%">
-                    Name:
+                    Назва:
                     @Model.task.Name
                 </div>
                 <div class="centerText" style="width:100%">
-                    Type:
+                    Тип:
                     @Model.task.Type
                 </div>
                 <div class="centerText" style="width:100%">
-                    Description:
+                    Опис:
                     @Model.task.Description
                 </div>
                 <div class="centerText">
