--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -26,11 +26,11 @@
                 <div class="centerText">
                     <a href="~/Index/DownloadTaskFile/@Model.task.Id">@Model.task.FileName</a>
                 </div>
-                <div class="centerText">
-                    <div class="button">
+                <div class="centerText flex" style="justify-content: center;">
+                    <div class="button centerText  margin-right13px">
                         <a class="linksStyle" href="~/Index/ChangeFile/@Model.task.Id">Вибрати новий файл</a>
                     </div>
-                    <div class="button">
+                    <div class="button centerText">
                         <a class="linksStyle" href="~/Index/Reaply/@Model.task.Id">Написати відгук</a>
                     </div>
                 </div>
