--- a/Classroom/Views/GroupC/Create.cshtml
+++ b/Classroom/Views/GroupC/Create.cshtml
@@ -19,7 +19,7 @@
         <input type="text" name="description" placeholder="Опис" />
 
 
-        <label>Password</label>
+        <label>Пароль</label>
         <input type="password" name="password" placeholder="Пароль"/>
 
 
