--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -81,7 +81,7 @@
                     <div class="flex spaceBetween menuBlock" style="width:100%">
                         <div class=" flex leftMenuBlock" style="width:20%">
                             <div class="margin-right13px margin-left30px">
-                                <span>@r.Mark:</span>
+                                <span>Оцінка:</span>
                             </div>
                         </div>
                         <div class="rightMenuBlock margin-right30px flex" style="width:80%">
@@ -167,7 +167,7 @@
                     <div class="flex spaceBetween menuBlock" style="width:100%">
                         <div class=" flex leftMenuBlock" style="width:20%">
                             <div class="margin-right13px margin-left30px">
-                                <span>@r.Mark:</span>
+                                <span>Оцінка:</span>
                             </div>
                         </div>
                         <div class="rightMenuBlock margin-right30px flex" style="width:80%">
